--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -407,7 +407,27 @@
                     <div class="content6" style="max-width: 1200px;">
                         <div class="h1">Earn daily rewards on your idle tokens</div>
                         <div class="h5">Simple & Secure. Search popular coins and start earning.</div>
-                        
+                        <div class="grid-card">
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card1.png" alt="">
+                                    <div class="name-coin">USDT</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.46%-126.29%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
