--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -425,8 +425,180 @@
                                         </svg>
                                     </div>
                                 </a>
-
+    
                             </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card2.png" alt="">
+                                    <div class="name-coin">BTC</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.52%-71.08%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card3.png" alt="">
+                                    <div class="name-coin">BNB</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.50%-88.09%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card4.png" alt="">
+                                    <div class="name-coin">BUSD</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.69%-114.86%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card5.png" alt="">
+                                    <div class="name-coin">ETH</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.87%-77.93%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card6.png" alt="">
+                                    <div class="name-coin">DOT</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.50%-47.34%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card7.png" alt="">
+                                    <div class="name-coin">ADA</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.89%-137.99%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card8.png" alt="">
+                                    <div class="name-coin">SHIB</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.27%-0.69%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card9.png" alt="">
+                                    <div class="name-coin">SOL</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>0.97%-101.02%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                            <div class="card">
+                                <a href="">
+                                    <img src="../static/img/homepage/card10.png" alt="">
+                                    <div class="name-coin">MATIC</div>
+                                    <div class="apr">
+                                        <div>APR</div>
+                                        <div>1.08%-125.01%</div>
+                                    </div>
+                                    <div class="svg">
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
+                                            class="css-199zucj">
+                                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                                d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                                fill="currentColor"></path>
+                                        </svg>
+                                    </div>
+                                </a>
+    
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
