--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -600,6 +600,7 @@
                             </div>
                         </div>
                         </div>
+                        <a href="" class="get-start" style="margin-top: 32px;">Start to Earn</a>
                     </div>
                 </div>
             </main>
