--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -425,7 +425,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -444,7 +444,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -463,7 +463,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -482,7 +482,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -501,7 +501,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -520,7 +520,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -539,7 +539,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -558,7 +558,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -577,7 +577,7 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                             <div class="card">
                                 <a href="">
@@ -596,11 +596,25 @@
                                         </svg>
                                     </div>
                                 </a>
-    
+
                             </div>
                         </div>
-                        </div>
                         <a href="" class="get-start" style="margin-top: 32px;">Start to Earn</a>
+                    </div>
+                </div>
+                <div class="content7-container">
+                    <div class="h1" style="margin-bottom: 64px;">Explore endless possibilities with Binance</div>
+                    <div class="content7">
+                        <div class="item">
+                            <a href="">
+                                <img src="../static/img/homepage/content7-img1.webp" alt="">
+                                <div style="width: 328px;">
+                                    <div class="text1">Dive into the world of NFTs</div>
+                                    <div class="text2">Open rare Mystery Boxes, explore IGOs, Fan Tokens, and more with Binance NFT.</div>
+                                </div>
+                            </a>
+                        </div>
+                       
                     </div>
                 </div>
             </main>
