Homepage: Content7 - Update html, css and add demo26 - place button and remainder of cards, finished content7

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -614,8 +614,26 @@
                                 </div>
                             </a>
                         </div>
-                       
+                        <div class="item">
+                            <a href="" style="flex-direction: column-reverse;">
+                                <img src="../static/img/homepage/content7-img2.webp" alt="">
+                                <div style="width: 328px;">
+                                    <div class="text1" style="margin: 0 0 16px;">Grow your business with Binance Pay</div>
+                                    <div class="text2">Reach more customers as you pay and get paid in crypto with our borderless payment technology on Binance Pay & Binance Marketplace.</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="item">
+                            <a href="">
+                                <img src="../static/img/homepage/content7-img3.webp" alt="">
+                                <div style="width: 328px;">
+                                    <div class="text1">Binance Earn</div>
+                                    <div class="text2">Hold your crypto funds and start earning.</div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
+                    <a href="" class="get-start" style="margin-top: 48px;">Explore Now</a>
                 </div>
             </main>
             <footer></footer>
