Homepage: Content8 - Update html, css and add demo27 - organize and bring a caption in content 8

--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -986,3 +986,21 @@ a.crypto {
 }
 
 /* //////////////////////////////// */
+.content8-container{
+    padding: 80px 120px;
+    background-color: #181A20;
+}
+
+.content8-container .top{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 64px;
+}
+.content8-container .top .left{}
+
+.svg-better-than{
+    width: 1em;
+    height: 1em;
+    font-size: 24px;
+    margin-left: 4px;
+}
