--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -610,7 +610,8 @@
                                 <img src="../static/img/homepage/content7-img1.webp" alt="">
                                 <div style="width: 328px;">
                                     <div class="text1">Dive into the world of NFTs</div>
-                                    <div class="text2">Open rare Mystery Boxes, explore IGOs, Fan Tokens, and more with Binance NFT.</div>
+                                    <div class="text2">Open rare Mystery Boxes, explore IGOs, Fan Tokens, and more with
+                                        Binance NFT.</div>
                                 </div>
                             </a>
                         </div>
@@ -618,8 +619,10 @@
                             <a href="" style="flex-direction: column-reverse;">
                                 <img src="../static/img/homepage/content7-img2.webp" alt="">
                                 <div style="width: 328px;">
-                                    <div class="text1" style="margin: 0 0 16px;">Grow your business with Binance Pay</div>
-                                    <div class="text2">Reach more customers as you pay and get paid in crypto with our borderless payment technology on Binance Pay & Binance Marketplace.</div>
+                                    <div class="text1" style="margin: 0 0 16px;">Grow your business with Binance Pay
+                                    </div>
+                                    <div class="text2">Reach more customers as you pay and get paid in crypto with our
+                                        borderless payment technology on Binance Pay & Binance Marketplace.</div>
                                 </div>
                             </a>
                         </div>
@@ -634,6 +637,26 @@
                         </div>
                     </div>
                     <a href="" class="get-start" style="margin-top: 48px;">Explore Now</a>
+                </div>
+                <div class="content8-container">
+                    <div class="top">
+                        <div class="left">
+                            <div class="h1">Your trusted crypto exchange </div>
+                            <div class="h5" style="">Here at Binance, we are committed to user protection with strict
+                                protocols and industry-leading technical measures.</div>
+                        </div>
+                        <div class="right">
+                            <a href="" style="color: #848E9C; display: flex; align-items: center;" >
+                                Learn more
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="svg-better-than">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                        fill="currentColor"></path>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="bottom"></div>
                 </div>
             </main>
             <footer></footer>
