--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -660,64 +660,15 @@
                         <div class="left">
                             <div class="line">
                                 <div class="left">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="none">
-                                        <path opacity=".2"
-                                            d="M55 6.667L58.333 10l3.334-3.333-3.334-3.334L55 6.667zM34.166 75.833l2.5 2.5 2.5-2.5-2.5-2.5-2.5 2.5zm-22.5-3.333h2.5V70h-2.5v2.5z"
-                                            fill="#76808F" />
-                                        <path fill-rule="evenodd" clip-rule="evenodd"
-                                            d="M5 15h70v24.167h5V42.5H0v-3.333h5V15zm6.666 24.167h20V25.833h-20v13.334z"
-                                            fill="#76808F" />
-                                        <path opacity=".2" d="M5 40.833h70V65H5V40.833zm6.666-15h20v13.334h-20V25.833z"
-                                            fill="#76808F" />
-                                        <path d="M11.666 45.833v10h20v-10h-5.833L21.665 50 17.5 45.833h-5.833z"
-                                            fill="url(#paint0_linear_1288_31969)" />
-                                        <path d="M37.5 25.833h15.833v3.334H37.5v-3.334z"
-                                            fill="url(#paint1_linear_1288_31969)" />
-                                        <path d="M37.5 35.833h30.833v3.334H37.5v-3.334z"
-                                            fill="url(#paint2_linear_1288_31969)" />
-                                        <path fill="#76808F"
-                                            d="M37.5 45.833h30.833v3.333H37.5zm0 6.667h30.833v3.333H37.5z" />
-                                        <path d="M26.937 39.167a5.834 5.834 0 10-10.544 0h10.544z"
-                                            fill="url(#paint3_linear_1288_31969)" />
-                                        <path d="M21.735 42.5h-.14a5.414 5.414 0 00.14 0z"
-                                            fill="url(#paint4_linear_1288_31969)" />
-                                        <defs>
-                                            <linearGradient id="paint0_linear_1288_31969" x1="21.666" y1="45.833"
-                                                x2="21.666" y2="55.833" gradientUnits="userSpaceOnUse">
-                                                <stop stop-color="#929AA5" />
-                                                <stop offset="1" stop-color="#76808F" />
-                                            </linearGradient>
-                                            <linearGradient id="paint1_linear_1288_31969" x1="37.5" y1="32.5"
-                                                x2="68.333" y2="32.5" gradientUnits="userSpaceOnUse">
-                                                <stop stop-color="#F0B90B" />
-                                                <stop offset="1" stop-color="#F8D33A" />
-                                            </linearGradient>
-                                            <linearGradient id="paint2_linear_1288_31969" x1="37.5" y1="32.5"
-                                                x2="68.333" y2="32.5" gradientUnits="userSpaceOnUse">
-                                                <stop stop-color="#F0B90B" />
-                                                <stop offset="1" stop-color="#F8D33A" />
-                                            </linearGradient>
-                                            <linearGradient id="paint3_linear_1288_31969" x1="21.665" y1="30.834"
-                                                x2="21.665" y2="42.501" gradientUnits="userSpaceOnUse">
-                                                <stop stop-color="#F0B90B" />
-                                                <stop offset="1" stop-color="#F8D33A" />
-                                            </linearGradient>
-                                            <linearGradient id="paint4_linear_1288_31969" x1="21.665" y1="30.834"
-                                                x2="21.665" y2="42.501" gradientUnits="userSpaceOnUse">
-                                                <stop stop-color="#F0B90B" />
-                                                <stop offset="1" stop-color="#F8D33A" />
-                                            </linearGradient>
-                                        </defs>
-                                    </svg>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M6 12.002v48h60v-48H6zm7.5 21h-3v-9h3v9zM13.5 48h-3v-9h3v9zM51 24.007H37.5v8.25H51v-8.25z" fill="url(#paint0_linear_1288_32000)"/><path fill-rule="evenodd" clip-rule="evenodd" d="M12 18h48v36H12v-5.998h1.5v-9H12v-6h1.5v-9H12V18zm39 6.007H37.5v8.25H51v-8.25z" fill="url(#paint1_linear_1288_32000)"/><path opacity=".2" d="M33 2.625l2.625 2.625 2.625-2.625L35.625 0 33 2.625zM0 31.502l1.5 1.5 1.5-1.5-1.5-1.5-1.5 1.5zM49.5 69h3v-3h-3v3zm-39-35.997h3v-9h-3v9zM10.5 48h3v-9h-3v9z" fill="#76808F"/><path d="M57 48.006h-3v-24h3v24z" fill="url(#paint2_linear_1288_32000)"/><path d="M37.5 34.506h3v3h-3v-3z" fill="url(#paint3_linear_1288_32000)"/><path d="M51 34.506h-3v3h3v-3z" fill="url(#paint4_linear_1288_32000)"/><path d="M42.75 34.506h3v3h-3v-3z" fill="url(#paint5_linear_1288_32000)"/><path d="M40.5 39.759h-3v3h3v-3z" fill="url(#paint6_linear_1288_32000)"/><path d="M48 39.759h3v3h-3v-3z" fill="url(#paint7_linear_1288_32000)"/><path d="M45.75 39.759h-3v3h3v-3z" fill="url(#paint8_linear_1288_32000)"/><path d="M37.5 45.007h3v3h-3v-3z" fill="url(#paint9_linear_1288_32000)"/><path d="M51 45.007h-3v3h3v-3z" fill="url(#paint10_linear_1288_32000)"/><path d="M42.75 45.007h3v3h-3v-3z" fill="url(#paint11_linear_1288_32000)"/><defs><linearGradient id="paint0_linear_1288_32000" x1="6" y1="12.003" x2="66" y2="12.003" gradientUnits="userSpaceOnUse"><stop stop-color="#76808F"/><stop offset="1" stop-color="#929AA5"/></linearGradient><linearGradient id="paint1_linear_1288_32000" x1="36" y1="54" x2="36" y2="18" gradientUnits="userSpaceOnUse"><stop stop-color="#F0B90B"/><stop offset="1" stop-color="#F8D33A"/></linearGradient><linearGradient id="paint2_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint3_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint4_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint5_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint6_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint7_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint8_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint9_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint10_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient><linearGradient id="paint11_linear_1288_32000" x1="46.688" y1="24.004" x2="46.688" y2="48.378" gradientUnits="userSpaceOnUse"><stop stop-color="#929AA5"/><stop offset="1" stop-color="#76808F"/></linearGradient></defs></svg>
                                 </div>
-                                <div class="right">
-                                    <div class="text1">Verify your identity</div>
-                                    <div class="text2">Complete the identity verification process to secure your account
-                                        and transactions.</div>
+                                <div class="right" style="margin-left: 24px; width: auto;">
+                                    <div class="text1" style="font-weight: 400; font-size: 20px;">Secure Asset Fund for Users (SAFU)</div>
+                                    <div class="text2">Binance stores 10% of all trading fees in a secure asset fund to protect a share of user funds.</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="right" style="margin-left: 24px; order: 2;display: flex; align-items: center;">
+                        <div class="right" style="margin-left: 24px; order: 2;display: flex; align-items: center ">
                             <img src="../static/img/homepage/content8-right.webp" alt="" style="width: 588px;height: 330.45px;">
                         </div>
                     </div>
