Homepage: Content8 - Update html, css and add demo30 - bring a button and other lines in order to complete content8

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -667,26 +667,61 @@
                                     <div class="text2">Binance stores 10% of all trading fees in a secure asset fund to protect a share of user funds.</div>
                                 </div>
                             </div>
+                            <div class="line">
+                                <div class="left">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M66 57.002H6v-45h60v45zM25.875 25.395L15.75 36.002l10.125 10.606c5.592 5.858 14.658 5.858 20.25 0L56.25 36.002 46.125 25.395c-5.592-5.858-14.658-5.858-20.25 0z" fill="url(#paint0_linear_1288_32013)"/><path d="M1.5 55.5h69V60h-69v-4.5zM6 12h60v4.5H6V12z" fill="#76808F"/><path opacity=".2" d="M20.25 66L18 63.75 15.75 66 18 68.25 20.25 66zM3 25.5H0v3h3v-3z" fill="#76808F"/><circle opacity=".2" cx="41.25" cy="30.75" r="3.75" fill="#76808F"/><path d="M43.849 33.453a3.75 3.75 0 01-5.303-5.302 8.25 8.25 0 105.303 5.302z" fill="#76808F"/><path opacity=".2" d="M54 5.249l3 3 3-3-3-3-3 3z" fill="#76808F"/><defs><linearGradient id="paint0_linear_1288_32013" x1="36" y1="57.002" x2="36" y2="12.002" gradientUnits="userSpaceOnUse"><stop stop-color="#F0B90B"/><stop offset="1" stop-color="#F8D33A"/></linearGradient></defs></svg>
+                                </div>
+                                <div class="right" style="margin-left: 24px; width: auto;">
+                                    <div class="text1" style="font-weight: 400; font-size: 20px;">Personalised Access Control</div>
+                                    <div class="text2">Personalized access control allows you to restrict devices and addresses that can access your account, for greater ease of mind.</div>
+                                </div>
+                            </div>
+                            <div class="line">
+                                <div class="left">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M63.333 70H10V33.333h53.333V47.5l4.167 4.167-4.167 4.166V70zM40 41.667v20h-6.667v-20H40z" fill="url(#paint0_linear_1288_31952)"/><path fill-rule="evenodd" clip-rule="evenodd" d="M60 63.333c6.444 0 11.667-5.223 11.667-11.666C71.667 45.223 66.444 40 60.001 40c-5.285 0-9.75 3.514-11.184 8.333H33.334v13.334h6.667V55h8.816c1.434 4.82 5.899 8.333 11.184 8.333zm-5-11.666l5 5 5-5-5-5-5 5z" fill="#76808F"/><path opacity=".2" d="M60 16.667L63.333 20l3.334-3.333-3.334-3.334L60 16.667zM70.834 66.25l2.083 2.083 2.084-2.083-2.084-2.083-2.083 2.083zM4.166 44.167h2.5v-2.5h-2.5v2.5z" fill="#76808F"/><path fill-rule="evenodd" clip-rule="evenodd" d="M36.667 15a9.167 9.167 0 00-9.166 9.167v9.166h-6.667v-9.166c0-8.745 7.089-15.834 15.833-15.834 8.745 0 15.834 7.09 15.834 15.834V25h-6.667v-.833A9.167 9.167 0 0036.667 15z" fill="#76808F"/><defs><linearGradient id="paint0_linear_1288_31952" x1="38.75" y1="70" x2="38.75" y2="33.333" gradientUnits="userSpaceOnUse"><stop stop-color="#F0B90B"/><stop offset="1" stop-color="#F8D33A"/></linearGradient></defs></svg>
+                                </div>
+                                <div class="right" style="margin-left: 24px; width: auto;">
+                                    <div class="text1" style="font-weight: 400; font-size: 20px;">Advanced Data Encryption</div>
+                                    <div class="text2">Your transaction data is secured via end-to-end encryption, ensuring that only you have access to your personal information.</div>
+                                </div>
+                            </div>
                         </div>
                         <div class="right" style="margin-left: 24px; order: 2;display: flex; align-items: center ">
                             <img src="../static/img/homepage/content8-right.webp" alt="" style="width: 588px;height: 330.45px;">
                         </div>
                     </div>
+                    <a href="" class="get-start" style="margin-top: 16px;">Start Now</a>
                 </div>
             </main>
             <footer></footer>
         </div>
     </div>
-    <script type="text/javascript">
-        // Save the current scroll position
-        var scrollPosition = window.pageYOffset;
-
-        // Restore the saved scroll position when the page loads
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+    window.onbeforeunload = function () {
+            var scrollPos;
+            if (typeof window.pageYOffset != 'undefined') {
+                scrollPos = window.pageYOffset;
+            }
+            else if (typeof document.compatMode != 'undefined' && document.compatMode != 'BackCompat') {
+                scrollPos = document.documentElement.scrollTop;
+            }
+            else if (typeof document.body != 'undefined') {
+                scrollPos = document.body.scrollTop;
+            }
+            document.cookie = "scrollTop=" + scrollPos;
+        }
         window.onload = function () {
-            window.scrollTo(0, scrollPosition);
-        };
+            if (document.cookie.match(/scrollTop=([^;]+)(;|$)/) != null) {
+                var arr = document.cookie.match(/scrollTop=([^;]+)(;|$)/);
+                document.documentElement.scrollTop = parseInt(arr[1]);
+                document.body.scrollTop = parseInt(arr[1]);
+            }
+        }
 
     </script>
+
 </body>
 
 </html>
