--- a/templates/academy.html
+++ b/templates/academy.html
@@ -93,17 +93,16 @@
                             </button>
                         </div>
                         <div id="item_login">
-                            <div id="Log_In"><a href="">Log In</a></div>
+                            <div id="Log_In"><a href=""><b>Log In</b></a></div>
                             <div id="Register">
                                 <a href="">
                                     <p>Register</p>
                                 </a>
                             </div>
-
                         </div>
                         <div id="item_2">
-                            <i class="fa-solid fa-globe" style="font-size: 17.5px;"></i>
-                            <i class="fas fa-sun"></i>
+                            <a href=""><i class="fa-solid fa-globe" style="font-size: 17.5px;"></i></a>
+                            <a href=""><i class="fas fa-sun"></i></a>
                         </div>
                     </div>
                 </div>
