Academy:Update html,css-add-gift_icon_gift-align_gift_conten, demo_academy_hinh5...

--- a/templates/academy.html
+++ b/templates/academy.html
@@ -108,7 +108,21 @@
                 </div>
             </div>
         </div>
-        <div id="gift"></div>
+        <div id="gift">
+
+            <div id="gift_item">
+                <div id="icon_gift"><i class="fa-solid fa-gift"></i></div>
+                <div id="gift_text">
+                    <p>Earn FREE Crypto While You Learn</p>
+                </div>
+                <div id="Learn_Now">
+                    <a href="">
+                        <p>Learn Now</p>
+                    </a>
+                </div>
+            </div>
+
+        </div>
         <div id="center"></div>
         <div id="below"></div>
     </div>
