--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -252,6 +252,48 @@ html body {
     display: flex;
     background-color: rgb(60, 38, 1);
     justify-content: center;
+    align-items: center;
+}
+
+#gift_item {
+    width: 354px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#icon_gift {
+    color: rgb(252, 213, 53);
+}
+
+#gift_text {
+    font-size: 14px;
+    color: rgb(234, 236, 239);
+}
+
+#Learn_Now {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#Learn_Now a {
+    height: 32px;
+    width: 92.89px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 52px;
+    background-color: rgb(252, 213, 53);
+    color: rgb(2, 2, 2);
+    border-radius: 4px;
+    font-size: 14px;
+    text-decoration: none;
+}
+
+#gift:hover a {
+    box-shadow: inset 0 0 0 77px rgba(126, 124, 113, 0.454);
+    background-color: rgb(252, 213, 53);
 }
 
 #center {
